common/src/main/resources/less/style.less
@import "suithemes/default/globals/site.variables";
@import "~theme/modules/sidebar.variables";
@import "~theme/globals/site.variables";

// vertical buttons
@import "verticalbuttons.less";
@import "vendor/react-resizable.less";
@import "vendor/react-grid-layout.less";
// theming variables
@import "variables-dark.less";
@import "variables-light.less";
@import "explore-grid.less";

@gridSpace: 5px;
@minHeight: 2.85714286em; // TODO: Calculate this on less
@resizeHandleWidth: 5px; // Width of the tree resize handle

:root {
  color-scheme: dark;
}

// Scrollbars
* {
  scrollbar-width: thin;
}

/* Works on Chrome/Edge/Safari */
*::-webkit-scrollbar {
  width: 12px;
}

html,
body {
  box-sizing: border-box;
}

body.dark-theme {
  .dark-theme();
}

body.light-theme {
  .light-theme();
}

@media (prefers-color-scheme: dark) {
  /* defaults to dark theme */
  body {
    .dark-theme();
  }

  /* Override dark mode with light mode styles if the user decides to swap */
  body.light-theme {
    .light-theme();
  }
}

// Mixins
//
.full-height-width {
  height: 100%;
  width: 100%;
}

// Classes
.tilemenu {
  background: darkgray;
}

.explore-accented {
  color: var(--explore-accent-color);
}

//----------
// Main grid
//----------
.main-grid {
  @topBottom: 42px;

  display: grid;
  min-height: 100vh;
  // Required for iOS to work with 100vh
  min-height: -webkit-fill-available;
  width: 100%;
  overflow: hidden;
  grid-template-columns: 1fr;
  grid-template-rows: @topBottom minmax(calc(100% - @topBottom - @topBottom), 1fr) @topBottom;
  grid-template-areas:
    "header"
    "body"
    "sidebar";

  @media (min-width: @target-grid-responsive-cutoff) {
    grid-template-columns: 50px auto;
    grid-template-rows: @topBottom minmax(calc(100% - @topBottom), 1fr);
    grid-template-areas:
      "header header"
      "sidebar body";
  }
}

.main-body {
  grid-area: body;
  max-width: 100vw;
  overflow: hidden;
}

.main-title {
  text-transform: uppercase;
  letter-spacing: 0.4em;
}

.main-user-name {
  margin-left: auto;
  letter-spacing: 0.1em;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.ui.button.active.side-button {
  border-top: var(--explore-accent-color) solid 4px;
  background-color: var(--under-tab-background-active-color);
  font-weight: bold;
}

.ui.menu .item.main-user-name {
  flex-shrink: 1;
  display: inline-block;
}

.ui.tabular.menu .item.connection-icon {
  padding-right: 0.5em;
  padding-left: 0;
}

.ui.tabular.menu .item.main-menu-dropdown {
  padding-right: 0.5em;
  padding-left: 0;
}

.ui.menu:not(.vertical) .right.menu.main-menu {
  margin-left: 0 !important; //SUI has !imporant
}

.explore-tile-title {
  background-color: var(--tile-title-background);
  display: flex;
  flex-direction: row;
  align-items: center;

  & .tabular.menu .item {
    color: var(--tile-title-color);
    letter-spacing: 0.1em;
  }
}

.ui.menu.explore-tile-title-menu {
  margin-top: 0;
  cursor: pointer;
  min-height: 36px;
}

.ui.menu.explore-tile-title-menu .item {
  padding-left: 0.5em;
  letter-spacing: 2px;
}

.ui.menu.explore-tile-title-menu a.item:hover {
  background: unset;
  color: unset;
}

.ui.button.tile-back-button {
  margin-right: 0;

  @media (min-width: @target-grid-responsive-cutoff) {
    display: none;
  }
}

.main-header > .ui.tabular.menu .item {
  color: var(--main-header-color);
}

.main-header {
  grid-area: header;
  width: 100vw;
  min-width: 100vw;
  background-color: var(--main-header-background-color);

  & > .ui.tabular.menu {
    border-bottom: none;
  }
}

.sidetabs {
  grid-area: sidebar;
  background: var(--sidetab-background);
  overflow: hidden;
}

.sidetabs-divider {
  display: none;

  @media (min-width: @target-grid-responsive-cutoff) {
    display: block;
  }
}

// Side tabs
.sidetabs-body {
  display: flex;

  @media (min-width: @target-grid-responsive-cutoff) {
    height: 100%;
    display: block;
    overflow: hidden;
  }
}

.sidetabs-body-vertical {
  height: 100%;
  display: none;

  @media (min-width: @target-grid-responsive-cutoff) {
    display: inherit;
  }
}

.sidetabs-body-horizontal {
  height: 100%;
  display: flex;
  overflow: hidden;
  padding-top: 0.2em;
  padding-bottom: 0.2em;
  width: 100vw;
  max-width: 100vw;
  justify-content: space-between;
  align-items: stretch;
  border-top: 1px solid var(--under-tab-border-color);
}

.ui.label.bottom-tab-selector {
  flex-grow: 1;
  flex-shrink: 1;
  font-weight: 300;
  text-align: center;
  padding-top: 0.4em;
  padding-bottom: 0.2em;
  margin-right: 0.2em;
  margin-left: 0.2em;
  border-radius: 0.2em;
  border: 1px solid var(--under-tab-border-color);
  background-color: var(--under-tab-background-color);
}

.ui.label.bottom-tab-selector:hover,
.ui.label.bottom-tab-selector:focus {
  border: 1px solid var(--under-tab-border-color);
  background-color: var(--under-tab-background-focus-color);
}

.ui.label.active.bottom-tab-selector {
  border: 1px solid var(--under-tab-border-color);
  border-top: var(--explore-accent-color) solid 4px;
  background-color: var(--under-tab-background-active-color);
  font-weight: bold;
}

.ui.label.active.bottom-tab-selector:hover,
.ui.label.active.bottom-tab-selector:focus {
  border: 1px solid var(--under-tab-border-color);
  border-top: var(--explore-accent-color) solid 4px;
  background-color: var(--under-tab-background-focus-active-color);
}
/* ... */

